--- a/srophe-app/documentation/index.html
+++ b/srophe-app/documentation/index.html
@@ -1,48 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/syrpage.html" data-template-at="content">
+<div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="about">Syriaca.org Documentation</h1>
-            <p>The creation of any reference work requires making a number of decisions simply in order to bring the project
-                to a stage of completion where it is useful to the scholarly community.  The documents linked to below describe
-                decisions taken in the development of the Syriaca.org reference tools. 
-            </p>
+            <h1 class="about">Documentation</h1>
+            <p>Your Documentation here:</p>
             <h2>Research Tools:</h2>
-            <ul>
-                <li>
-                    <a href="../geo/index.html">
-                        <em>The Syriac Gazetteer</em>
-                    </a>
-                </li>
-            </ul>
+            
             <h2>Documentation:</h2>
             <ul>
                 <li>
-                    <a href="dates.html">Dates</a>
-                </li>
-                <li>
-                    <a href="faq.html">Frequently Asked Questions</a>
-                </li>
-                <li>
-                    <a href="headwords.html">Headwords</a>
-                </li>
-                <li>
-                    <a href="view-syriac.html">How to View Syriac Text on Syriaca.org</a>
-                </li>
-                <li>
-                    <a href="place-types.html">Place Types</a>
-                </li>
-                <li>
-                    <a href="confessions.html">Religious Communities</a>
-                </li>
-                <li>
-                    <a href="terms.html">Technical Terminology</a>
-                </li>
-                <li>
-                    <a href="view-teiDocs.html">TEI Tag usage in Gazetteer</a>
-                </li>
-                <li>
-                    <a href="/api-documentation/index.html">Syriaca.org API Documentation</a>
+                    <a href="#">Links</a>
                 </li>
             </ul>
             <div>
