--- a/srophe-app/geo/about.html
+++ b/srophe-app/geo/about.html
@@ -123,26 +123,9 @@
                 <h3 class="underline">Documentation</h3>
                 <ul class="nav nav-tabs nav-stacked">
                     <li>
-                        <a href="../documentation/dates.html">Dates</a>
+                        <a href="#">Links</a>
                     </li>
-                    <li>
-                        <a href="../documentation/faq.html">Frequently Asked Questions</a>
-                    </li>
-                    <li>
-                        <a href="../documentation/headwords.html">Headwords</a>
-                    </li>
-                    <li>
-                        <a href="../documentation/view-syriac.html">How to View Syriac Text on Syriaca.org</a>
-                    </li>
-                    <li>
-                        <a href="../documentation/place-types.html">Place Types</a>
-                    </li>
-                    <li>
-                        <a href="../documentation/confessions.html">Religious Communities</a>
-                    </li>
-                    <li>
-                        <a href="../documentation/terms.html">Technical Terminology</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
