--- a/srophe-app/geo/help/index.html
+++ b/srophe-app/geo/help/index.html
@@ -7,25 +7,7 @@
         <h2>Topics:</h2>
         <ul>
             <li>
-                <a href="../../documentation/dates.html">Dates</a>
-            </li>
-            <li>
-                <a href="../../documentation/faq.html">Frequently Asked Questions</a>
-            </li>
-            <li>
-                <a href="../../documentation/headwords.html">Headwords</a>
-            </li>
-            <li>
-                <a href="../../documentation/view-syriac.html">How to View Syriac Text on Syriaca.org</a>
-            </li>
-            <li>
-                <a href="../../documentation/place-types.html">Place Types</a>
-            </li>
-            <li>
-                <a href="../../documentation/confessions.html">Religious Communities</a>
-            </li>
-            <li>
-                <a href="../../documentation/terms.html">Technical Terminology</a>
+                <a href="#">Links</a>
             </li>
         </ul>
         <div>
