--- a/srophe-app/bhse/index.html
+++ b/srophe-app/bhse/index.html
@@ -9,8 +9,17 @@
             </p>
             <p>
                 <i>Bibliotheca Hagiographica Syriaca Electronica</i> describes texts written about saints and includes information about different versions and data such as the title, prologue, and epilogue of the saint's life, along with the hagiographer. The database notes if there are ancient or modern translations of the texts, the critical edition of the text, the MSS containing the Vita, and relevant secondary literature. This reference work is derived from the earlier <i>Biblioteca Hagiographica Syriaca</i> (<i>BHS</i>) project that was created by Fr. Ugo Zanetti and Dr. Claude Detienne but never published.</p>
-            <p>
-                <a href="http://wwwb.library.vanderbilt.edu/bhse/work.html?id=http://syriaca.org/work/1000">Sample entry</a> for a saint's life from <i>Volume I: Bibliotheca Hagiographica Syriaca Electronica</i>.</p>
+            <p>Sample entries for saints' lives from <i>Volume I: Bibliotheca Hagiographica Syriaca Electronica</i>:</p>
+            <ul>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/693"><i>On Abraham of the High Mountain</i></a></li>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/969"><i>On Gordian, Father of Saint George</i></a></li>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/2007"><i>On Saba Goushnazdad</i></a></li>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/896"><i>On Sabrisho I</i></a></li>
+            </ul>
             <p>Another volume in this same series, <i>Volume II: Qadishe</i> contains information on persons relevant to the study of Syriac hagiography include the saints themselves (such as St. Simeon the Stylite) as well as their associates and the authors who narrated their lives or wrote homilies and hymns about them. This reference work may be found <a href="http://wwwb.library.vanderbilt.edu/exist/apps/srophe/saints/index.html">here</a>.</p>
         </div>
     </div>
