Added one more link

--- a/srophe-app/bhse/index.html
+++ b/srophe-app/bhse/index.html
@@ -19,6 +19,8 @@
                     <a href="http://wwwb.library.vanderbilt.edu/work/2007"><i>On Saba Goushnazdad</i></a></li>
                 <li>
                     <a href="http://wwwb.library.vanderbilt.edu/work/896"><i>On Sabrisho I</i></a></li>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/779"><i>On Peter Syncellus</i></a></li>
             </ul>
             <p>Another volume in this same series, <i>Volume II: Qadishe</i> contains information on persons relevant to the study of Syriac hagiography include the saints themselves (such as St. Simeon the Stylite) as well as their associates and the authors who narrated their lives or wrote homilies and hymns about them. This reference work may be found <a href="http://wwwb.library.vanderbilt.edu/exist/apps/srophe/saints/index.html">here</a>.</p>
         </div>
