--- a/srophe-app/q/index.html
+++ b/srophe-app/q/index.html
@@ -30,7 +30,9 @@
                     <a href="http://wwwb.library.vanderbilt.edu/work/2007"><i>On Saba Goushnazdad</i></a></li>
                 <li>
                     <a href="http://wwwb.library.vanderbilt.edu/work/896"><i>On Sabrisho I</i></a></li>
-                </ul>
+                <li>
+                    <a href="http://wwwb.library.vanderbilt.edu/work/779"><i>On Peter Syncellus</i></a></li>
+            </ul>
             <p>Sample entries for saints from <i>Volume II: Qadishe</i>:</p>
             <ul>
                 <li><a href="wwwb.library.vanderbilt.edu/person/1109">Abraham of the High Mountain</a></li>
