Custom index and about pages.

--- a/srophe-app/geo/about.html
+++ b/srophe-app/geo/about.html
@@ -1,11 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
+<div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround"
+    data-template-with="templates/geo.html" data-template-at="content">
     <div class="section">
-        <h1 class="title about">About <i>The Syriac Gazetteer Demo App</i>
-        </h1>
+        <h1 class="title about">Welcome to <i>LOGAR</i></h1>
         <div class="row">
             <div class="col-md-12 section">
-                <p>Place holder text</p>
+                <p class="small">Editors: Steven A. Wernke (Vanderbilt University) and Jeremy
+                    Mumford (Brown University)</p>
+                <p><i>LOGAR</i> is a geographical index and map of places relevant to Andean studies. It
+                    focuses initially on the towns established during the mass colonial resettlement
+                    program known as the <i>Reducción General de Indios</i> (General Resettlement of
+                    Indians) of the Viceroy Francisco de Toledo. The Reducción forcibly resettled
+                    approximately 1.4 million native Andeans into over 1,000 reducción (literally,
+                    “reduction”) towns. Reducciones were founded (at least nominally) during the
+                    Visita General (Toledo’s tour of inspection and resettlement) between 1570 and
+                    1575. The scope of <i>LOGAR</i> is initially limited to the area under most direct
+                    jurisdictional control of Viceroy Toledo—specifically, the audiencias of Lima
+                    and Charcas. Following its introduction, <i>LOGAR</i> will be continuously updated by
+                    edited contributions by scholars of Andean history in various countries, who
+                    have expressed interest in having a tool and repository such as <i>LOGAR</i>. </p>
+                <p> As a reference work, <i>LOGAR</i> is organized by an alphabetical index of places and a
+                    map of place locations. Users may browse both located and unlocated places. The
+                    concept of <i>place</i> is thus central to its organization. Following the conventions
+                    of the ancient Mediterranean world, <i>LOGAR</i> defines
+                    places as “geographical and historical contexts for names and locations” [1, 2].
+                    Places may refer to discrete, locatable features in the physical world, such as
+                    a town or road. But they are not only such features. Places can be
+                    jurisdictional entities without discrete spatial footprints, or any
+                    geographical, spatial, or historical context that is imbued with human
+                    experience. This place concept is attributed most proximately to the geographer
+                    Yi Fu Tuan [3]. </p>
+                <p> Thus, places are not (or at least not only) locations; places may in fact be
+                    un-locatable. Very few maps survive from the sixteenth-century Andes, and places
+                    are almost never precisely located in colonial archival textual sources. Places
+                    are instead most often “located” by names (toponyms), which may or may not have
+                    been coevally or subsequently mapped or survived to the present. In cases in
+                    which a place is not yet or cannot be located in <i>LOGAR</i>, its entry is listed in
+                    the alphabetic listing of places, with no corresponding location on the map.
+                    Each place entry cross-references instances of its mention in textual sources.
+                    As a practical matter, this concept enables inclusion of places that are not (at
+                    least currently) locatable, or preferably not represented as discrete points or
+                    features on a map. Therefore, many places catalogued in <i>LOGAR</i> are not currently
+                    located, but they may be in the future, as knowledge expands and as scholars
+                    contribute to <i>LOGAR</i>. </p>
+                <p> Other place-names in archival texts do not refer to spatially bounded entities
+                    but, instead, to micro-ethnic groups constituting administrative jurisdictions.
+                    For instance, a <i>repartimiento</i> most often referred to an ethnically identified
+                    population granted in <i>encomienda</i> (a trusteeship of indigenous labor) to a
+                    Spanish <i>encomendero</i> (trustee). A repartimiento could comprise the population of
+                    a single reducción town, several reducción towns, or parts of several reducción
+                    towns; in such cases, families within the same reducción belonged to different
+                    repartimientos. <i>LOGAR</i> takes the editorial position that such instances should be
+                    located approximately (and indicating as such) when possible, with iterative
+                    locational revisions as new information is contributed by the <i>LOGAR</i> community. </p>
+                <p> <i>LOGAR</i> builds directly on the open source code base and architecture of the
+                    <a href="http://syriaca.org/">Syriac Gazetteer</a>. <i>LOGAR</i> is extensible (spatially and temporally), and over the
+                    long term, aims to serve as a more general repository and research tool of broad
+                    utility to the scholarly community of the Andean region. </p>
+                <!--
+                [1] http://pleiades.stoa.org/places
+                [2] http://sgillies.net/blog/1055/whats-an-un-gis/
+                [3] Y. Tuan 1975, “Place: An Experiential Perspective,” Geographical Review, 65:151-165.
+                -->
             </div>
         </div>
     </div>
