--- a/srophe-app/geo/index.html
+++ b/srophe-app/geo/index.html
@@ -2,9 +2,42 @@
 <div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
     <div class="row row-centered">
         <div class="col-md-12">
-            <h1>Welcome to <i>The Syriac Gazetteer Demo app</i>
+            <h1>Welcome to <i>Linked Open Gazetteer of the Andean Region</i>
             </h1>
-            <p>Place Holder Text</p>
+            <p class="small">Editors: Steven A. Wernke (Vanderbilt University) and Jeremy Mumford (Brown University)</p>
+            <ul>
+                <li>
+                    <a href="browse.html">Index page</a>: an alphabetic index of places in the gazetteer.</li>
+                <li>
+                    <a href="about.html">About page</a>: an overview of the gazetteer and its contributors.</li>
+                <li>
+                    <a href="browse.html?view=map">Browse maps</a>: browse places on an interactive map.</li>
+                <!-- <li>
+                    <a href="/place/78.html">Edessa</a>: featured place.</li>-->
+            </ul>
+            <p>
+                <a href="about.html">learn more »</a>
+            </p>
+            <hr/>
+            <h3>Funding for <i>Linked Open Gazetteer of the Andean Region</i> was provided by:</h3>
+            <ul class="list-inline funding" style="margin-left:2em;">
+                <li>
+                    <a href="http://www.neh.gov/">
+                        <img src="../resources/img/neh_logo_horizontal_rgb.jpg" alt="NEH"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.vanderbilt.edu/">
+                        <img src="../resources/img/vu07b.gif" alt="Vanderbilt University"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.brown.edu/">
+                        Brown University
+                    </a>
+                </li>
+            </ul>
+            <p class="caveat"> Any views, findings, conclusions, or recommendations expressed in this publication do not necessarily reflect those of the National Endowment for the Humanities or any of the other sponsors.</p>
         </div>
     </div>
 </div>
