--- a/srophe-app/geo/browse.html
+++ b/srophe-app/geo/browse.html
@@ -2,11 +2,6 @@
 <div xmlns="http://www.w3.org/1999/xhtml" data-template="templates:surround" data-template-with="templates/geo.html" data-template-at="content">
     <div class="section">
         <h1 class="title about">Index of Places</h1>
-        <div class="pull-right" id="link-icons">
-            <a href="https://maps.google.com/maps?f=q&amp;hl=en&amp;z=4&amp;q=http://syriaca.org/geo/atom-map.xql">
-                <img src="../resources/img/gmaps-25.png" alt="The Google Maps icon" title="click to view all known locations on Google Maps"/>
-            </a>
-        </div>
         <p style="margin:1em;">Listings of places registered in the Syriac Gazetteer.</p>
                
         <!-- Calls xquery functions -->
@@ -30,18 +25,8 @@
             </div>
         </div>
         <div id="externals">
-            <p>
-                <span class="label">Other formats</span>
-            </p>
-            <ul>
-                <!-- Change to api links-->
-                <li>
-                    <a href="atom.xql" rel="alternate" type="application/atom+xml" title="full set of records from the Syriac Gazetteer in Atom XML format">atom xml</a>
-                </li>
-            </ul>
-        </div>
-        <div>
-            <a href="howtoadd.html" class="btn feedback">Feedback?</a>
+            <h3>Other formats</h3>
+            <div data-template="browse:other-formats" data-template-coll="places"/>
         </div>
     </div>
 </div>
